export const ROUTES = {
  DASHBOARD: "Dashboard",
  LEVEL_SELECTION: "LevelSelection",
  EXERCISE_SELECTION: "ExerciseSelection",

  // Routes dynamiques d'exercices
  VOCABULARY_EXERCISE: "VocabularyExercise",
  VOCABULARY_REVISION: "VocabularyRevision", // ✅ AJOUT
  GRAMMAR_EXERCISE: "GrammarExercise",
  CONVERSATION_EXERCISE: "ConversationExercise",
  READING_EXERCISE: "ReadingExercise",
  ERROR_CORRECTION_EXERCISE: "ErrorCorrectionExercise",
  WORD_GAMES_EXERCISE: "WordGamesExercise",
  PHRASES_EXERCISE: "PhrasesExercise",
  SPELLING_EXERCISE: "SpellingExercise",
  ASSESSMENT_EXERCISE: "LevelAssessment",
};