...
      route: "/(tabs)/",
    },
    {
      id: "exercises",
      icon: "book-outline",
      activeIcon: "book",
      label: "Exercices",
      route: "/(tabs)/levelSelection",
    },
    {
      id: "chat",
      icon: "chatbubble-outline",
      activeIcon: "chatbubble",
...
